<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout">
    <Button
            android:text="@string/Explicit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
    <Button
            android:text="@string/Implicit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="116dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
    <Button
            android:text="@string/Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="208dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
    <Button
            android:text="@string/Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="292dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="456dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>